finish initial authentication code

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -1,86 +1,141 @@
-<!-- index.html -->
 <!doctype html>
+<html>
+  <head>
+    <title>Example of the Authorization Code flow with Spotify</title>
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+    <style type="text/css">
+      #login, #loggedin {
+        display: none;
+      }
+      .text-overflow {
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        width: 500px;
+      }
+    </style>
+  </head>
 
-<!-- ASSIGN OUR ANGULAR MODULE -->
-<html ng-app="wikiApp">
-<head>
-    <!-- META -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- Optimize mobile viewport -->
+  <body>
+    <div class="container">
+      <div id="login">
+        <h1>This is an example of the Authorization Code flow</h1>
+        <a href="/login" class="btn btn-primary">Log in with Spotify</a>
+      </div>
+      <div id="loggedin">
+        <div id="user-profile">
+        </div>
+        <div id="oauth">
+        </div>
+        <button class="btn btn-default" id="obtain-new-token">Obtain new token using the refresh token</button>
+      </div>
+    </div>
 
-    <title>Wiki</title>
+    <script id="user-profile-template" type="text/x-handlebars-template">
+      <h1>Logged in as {{display_name}}</h1>
+      <div class="media">
+        <div class="pull-left">
+          <img class="media-object" width="150" src="{{images.0.url}}" />
+        </div>
+        <div class="media-body">
+          <dl class="dl-horizontal">
+            <dt>Display name</dt><dd class="clearfix">{{display_name}}</dd>
+            <dt>Id</dt><dd>{{id}}</dd>
+            <dt>Email</dt><dd>{{email}}</dd>
+            <dt>Spotify URI</dt><dd><a href="{{external_urls.spotify}}">{{external_urls.spotify}}</a></dd>
+            <dt>Link</dt><dd><a href="{{href}}">{{href}}</a></dd>
+            <dt>Profile Image</dt><dd class="clearfix"><a href="{{images.0.url}}">{{images.0.url}}</a></dd>
+            <dt>Country</dt><dd>{{country}}</dd>
+          </dl>
+        </div>
+      </div>
+    </script>
 
-    <!-- SCROLLS -->
-    <link rel="stylesheet" href="stylesheets/bootstrap.min.css"><!-- load bootstrap -->
-    <link rel="stylesheet" type="text/css" href="stylesheets/custom.css">
-    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Bitter">
-    <!-- <link href="/stylesheets/simple-sidebar.css" rel="stylesheet"> -->
+    <script id="oauth-template" type="text/x-handlebars-template">
+      <h2>oAuth info</h2>
+      <dl class="dl-horizontal">
+        <dt>Access token</dt><dd class="text-overflow">{{access_token}}</dd>
+        <dt>Refresh token</dt><dd class="text-overflow">{{refresh_token}}></dd>
+      </dl>
+    </script>
 
-    <!-- SPELLS -->
-    
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script><!-- load jquery -->
-    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.8/angular.min.js">
-    </script><!-- load angular -->
-    <script type="text/javascript" src="/javascripts/main.js"></script>
-</head>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0-alpha.1/handlebars.min.js"></script>
+    <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+    <script>
+      (function() {
 
-<!-- SET THE CONTROLLER AND GET ALL toDoS -->
-<body data-spy="scroll" data-target= "sidebar-nav>" ng-controller="mainController">
-    <div id ="wrapper">
-        <div class="container">
-            <!--SIDE BAR-->
-            <div id = "sidebar-wrapper">
-                <ul><data-spy="scroll" class = "sidebar-nav>" ng-repeat="item in wiki | filter:query" > 
-                 <li class = "sidebar-brand" ng-click = "selectWiki(item.header); 'showEdit= true'">
-                     <a href = "#">{{item.header}} </a></li></data-spy="scroll">
-                 </ul>
-             </div>
+        /**
+         * Obtains parameters from the hash of the URL
+         * @return Object
+         */
+        function getHashParams() {
+          var hashParams = {};
+          var e, r = /([^&;=]+)=?([^&;]*)/g,
+              q = window.location.hash.substring(1);
+          while ( e = r.exec(q)) {
+             hashParams[e[1]] = decodeURIComponent(e[2]);
+          }
+          return hashParams;
+        }
 
-             <div id="page-content-wrapper">
-                <div class="container-fluid">
-                    <div class="row">
-                        <div class="col-lg-12">
-                            <!-- MAIN PAGE STUFF -->
-                            <div class="jumbotron">
-                                <h1> The Chocolate Wiki</h1>
-                                <h3> Brought to you by a Badass Team: </h3>
-                                <h4> Zarin Bhuiyan, Annabel Consilvio, and Casey Alvarado</h4>
-                                <button id = "addNew" ng-click = "enableShowNewWiki()" class="myButton"> New Wiki </button>
-                                <div class ="search-box" id = "searchStuff">
-                                 <!-- <input ng-model="search.$"> -->
-                                 <button type = "button" ng-click = "search()" class="myButton" id = "searchButton" style="float: right;"> Search </button>
-                                 <div style="overflow: hidden; padding-right: .5em;"><input type ="text" ng-model="query" placeholder="Search" class="form-control"></div>
-                                </div>
-                                </div>
-                                <div id = "wiki-content" ng-show = "!showNewWiki"> 
-                                    <div ng-hide="editorEnabled">
-                                        <h2>{{mainWiki.header}}</h2>
-                                        <p>{{mainWiki.content}}</p>
-                                        <br>
-                                        <button href="#" ng-click="enableEditor()" ng-show = "showEdit" class="myButton">Edit</button>
-                                    </div>
-                                    <div ng-show="editorEnabled">
-                                        Title: <br> <input ng-model="editableHeader" ng-show="editorEnabled" class="form-control"> <br>
-                                        Content: <textarea class="form-control" rows="5" ng-model="editableContent" ng-show="editorEnabled"></textarea>
-                                        <button href="#" ng-click="save(mainWiki.header)" class="myButton">Save</button>
-                                        or
-                                        <button href="#" class = "myButton" ng-click="disableEditor()" class="myButton">Cancel</button>.
-                                    </div>
-                                </div>
+        var userProfileSource = document.getElementById('user-profile-template').innerHTML,
+            userProfileTemplate = Handlebars.compile(userProfileSource),
+            userProfilePlaceholder = document.getElementById('user-profile');
 
-                                <!-- New form stuff -->
-                                <div id = "new wiki" ng-show = "showNewWiki"> <!-- ng-show = "showNewWiki" -->
-                                    <form class ="newWikiContent"> 
-                                        Title: <input type="text" ng-model="newWiki.header" class="form-control"/><br />
-                                        Content: <textarea ng-model="newWiki.content" class="form-control" rows="5" id = "inputBoxContent"></textarea><br><button class = "myButton" ng-click="saveNewWiki()"> Save </button>
-                                    </form>
-                                </div>
-                            </div>
+        var oauthSource = document.getElementById('oauth-template').innerHTML,
+            oauthTemplate = Handlebars.compile(oauthSource),
+            oauthPlaceholder = document.getElementById('oauth');
 
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </body>
-        </html>
+        var params = getHashParams();
+
+        var access_token = params.access_token,
+            refresh_token = params.refresh_token,
+            error = params.error;
+
+        if (error) {
+          alert('There was an error during the authentication');
+        } else {
+          if (access_token) {
+            // render oauth info
+            oauthPlaceholder.innerHTML = oauthTemplate({
+              access_token: access_token,
+              refresh_token: refresh_token
+            });
+
+            $.ajax({
+                url: 'https://api.spotify.com/v1/me',
+                headers: {
+                  'Authorization': 'Bearer ' + access_token
+                },
+                success: function(response) {
+                  userProfilePlaceholder.innerHTML = userProfileTemplate(response);
+
+                  $('#login').hide();
+                  $('#loggedin').show();
+                }
+            });
+          } else {
+              // render initial screen
+              $('#login').show();
+              $('#loggedin').hide();
+          }
+
+          document.getElementById('obtain-new-token').addEventListener('click', function() {
+            $.ajax({
+              url: '/refresh_token',
+              data: {
+                'refresh_token': refresh_token
+              }
+            }).done(function(data) {
+              access_token = data.access_token;
+              oauthPlaceholder.innerHTML = oauthTemplate({
+                access_token: access_token,
+                refresh_token: refresh_token
+              });
+            });
+          }, false);
+        }
+      })();
+    </script>
+</html>
+
