added default playlists etc

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -19,8 +19,11 @@
   <body>
     <div class="container">
       <div id="login">
-        <h1>This is an example of the Authorization Code flow</h1>
+        <br>
+        <h1>Welcome to Spotinder</h1>
+
         <a href="/login" class="btn btn-primary">Log in with Spotify</a>
+
       </div>
       <div id="loggedin">
         <div id="user-profile">
@@ -28,6 +31,106 @@
         <div id="oauth">
         </div>
         <button class="btn btn-default" id="obtain-new-token">Obtain new token using the refresh token</button>
+        <div id = "Genre1">
+          <h3><b>Hip Hop</b></h3>
+          <button class="btn btn-default1" id="Like-1">Like</button>
+          <h4><b>Jay-Z - Magna Carta...Holy Grail</b></h4>
+          <h5>Holy Grail (ft. Justin Timberlake)</h5>
+          <h5>Tom Ford</h5>
+          <h5>Oceans (ft. Frank Ocean)</h5>
+          <br>
+          <h4><b>Kanye West - Yeezus</b></h4>
+          <h5>I Am A God</h5>
+          <h5>Hold My Liquor</h5>
+          <h5>Guilt Trip</h5>
+          <br>
+          <h4><b>Eminem - Relapse: Refill</b></h4>
+          <h5>Bagpipes From Baghdad</h5>
+          <h5>Hello</h5>
+          <h5>We Made You</h5>
+          <br>
+        </div>
+
+        <div id = "Genre2">
+          <h3><b>Indie/Alternative</b></h3>
+          <button class="btn btn-default2" id="Like-2">Like</button>
+          <h4><b>Imagine Dragons - Night Visions</b></h4>
+          <h5>Radioactive</h5>
+          <h5>Tiptoe</h5>
+          <h5>Demons</h5>
+          <br>
+          <h4><b>Arctic Monkeys - AM</b></h4>
+          <h5>Do I Wanna Know?</h5>
+          <h5>R U Mine?</h5>
+          <h5>One For The Road</h5>
+          <br>
+          <h4><b>alt-J - An Awesome Wave</b></h4>
+          <h5>Intro</h5>
+          <h5>Breezeblocks</h5>
+          <h5>Tessellate</h5>
+          <br>
+        </div>
+
+        <div id = "Genre3">
+          <h3><b>Pop</b></h3>
+          <button class="btn btn-default3" id="Like-3">Like</button>
+          <h4><b>Calvin Harris - Motion</b></h4>
+          <h5>Blame</h5>
+          <h5>Outside (ft. Ellie Goulding)</h5>
+          <h5>Summer</h5>
+          <br>
+          <h4><b>Lorde - Pure Heroine</b></h4>
+          <h5>Royals</h5>
+          <h5>Glory and Gore</h5>
+          <h5>Team</h5>
+          <br>
+          <h4><b>Katy Perry - PRISM</b></h4>
+          <h5>Roar</h5>
+          <h5>Birthday</h5>
+          <h5>Dark Horse</h5>
+          <br>
+        </div>
+
+        <div id = "Genre4">
+          <h3><b>Rock</b></h3>
+          <button class="btn btn-default4" id="Like-4">Like</button>
+          <h4><b>Kings of Leon - Come Around Sundown</b></h4>
+          <h5>Pyro</h5>
+          <h5>The Immortals</h5>
+          <h5>The End</h5>
+          <br>
+          <h4><b>Blink 182 - Neighborhoods</b></h4>
+          <h5>Natives</h5>
+          <h5>After Midnight</h5>
+          <h5>Snake Charmer</h5>
+          <br>
+          <h4><b>Thirty Seconds To Mars</b></h4>
+          <h5>Escape</h5>
+          <h5>This is War</h5>
+          <h5>Kings and Queens</h5>
+          <br>
+        </div>
+
+        <div id = "Genre5">
+          <h3><b>Country</b></h3>
+          <button class="btn btn-default5" id="Like-5">Like</button>
+          <h4><b>Johnny Cash - Out Among The Stars</b></h4>
+          <h5>Out Among the Stars</h5>
+          <h5>After All</h5>
+          <h5>She Used to Love Me a Lot</h5>
+          <br>
+          <h4><b>Waylon Jennings - Waylon Forever</b></h4>
+          <h5>Jack of Diamonds</h5>
+          <h5>Ain't Livin' Long Like This</h5>
+          <h5>White Room</h5>
+          <br>
+          <h4><b>Willie Nelson - Walking the Line</b></h4>
+          <h5>I GOtta Get Drunk</h5>
+          <h5>No Show Jones</h5>
+          <h5>Half a Man</h5>
+          <br>
+        </div>
+
       </div>
     </div>
 
