--- a/public/views/index.html
+++ b/public/views/index.html
@@ -1,7 +1,6 @@
 
 <!doctype html>
-<html ng-app="spotinderApp">
- 
+<html ng-app = 'spotinderApp'>
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -21,11 +20,12 @@
     </style>
      <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.8/angular.min.js"></script>
      <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-    <script type="text/javascript" src="/javascripts/main.js"></script>
-
+     <script type="text/javascript" src="/javascripts/main.js"></script>
+    
   </head>
 
   <body ng-controller="mainController">
+
     <div class="container">
       <div id="login">
         <br>
@@ -171,7 +171,7 @@
     </script>
 
     <script src="//cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0-alpha.1/handlebars.min.js"></script>
-    <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+    <!-- // <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script> -->
     <script>
       (function() {
         /**
@@ -239,4 +239,5 @@
         }
       })();
     </script>
+  </body>
 </html>
