--- a/public/partials/callback.html
+++ b/public/partials/callback.html
@@ -5,15 +5,18 @@
   <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
   <title></title>
   <script>
-    console.log('hello');
+    // alert("loaded")
     window.onload = function () {
       var hash = window.location.hash;
-      if (window.location.search.substring(1).indexOf("error") !== -1) {
-        window.close();
-      } else if (hash) {
+      // if (window.location.search.substring(1).indexOf("error") !== -1) {
+        // window.close();
+      // } else 
+      if (hash) {
         var token = window.location.hash.split('&')[0].split('=')[1];
         localStorage.setItem('spotify-token', token);
+
       }
+      window.close();
     }
   </script>
 </head>
