--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15,6 +15,7 @@ header {
   background-color: #333333;
   color: white;
   display: flex;
+  text-align: center;
 }
 h1 {
   margin: 0;
@@ -26,12 +27,54 @@ h3 {
 #section-content {
   flex: 1;
 }
+#login {
+  position: absolute;
+  left: 80px;
+}
+/*#loggedin{
+  position: absolute;
+  left: 70px;
+  bottom: 300px;
+}*/
+#dl-horizontal {
+  position: absolute;
+  right: 500px;
+}
+/*.media-object {
+ position: absolute;
+ left: 80px;
+ bottom:250px;
 
-/* FORM ELEMENTS ============================================================ */
+}*/
+#searchBox{
+  position: absolute;
+  left: -20%;
+  width: 700px;
+}
+.loginpage{
+  position: absolute;
+  left: 42%;
+  width: 1000px;
+  bottom: 500px;
+
+}
+#user-profile{
+  position: absolute;
+  left: 80px;
+  bottom: -100px;
+  top:20%;
+}
+#Genre1 {
+  position: absolute;
+  right: 80px;
+  bottom: -150%;
+}
+ /*FORM ELEMENTS ============================================================ */
 label, input, textarea, button {
   font-family: 'Montserrat', sans-serif;
   font-size: 12pt;
   display: block;
+  width: 15%;
 }
 input {
   -ms-box-sizing: border-box;
@@ -64,6 +107,7 @@ textarea {
   border: none;
   background-color: #eeeeee;
   border-radius: 3px;
+  float:right;
 }
 textarea:focus {
   outline:none;
@@ -76,6 +120,7 @@ button {
   border: none;
   background-color: #333333;
   border-radius: 3px;
+  margin-left: 50px;
 }
 button:hover {
   color: #ffffff;
@@ -85,10 +130,11 @@ button:hover {
 button:active {
   background-color: #222222;
 }
+
 .form-control {
   padding: 6px;
 }
-/* CONTAINERS =============================================================== */
+ /*CONTAINERS =============================================================== */
 .container-body {
   width: 100%;
 }
@@ -111,7 +157,7 @@ button:active {
 .container-count {
   margin-top: 20px;
 }
-/* NAVIGATION =============================================================== */
+ /*NAVIGATION =============================================================== */
 .logo {
   flex: 1;
   font-size: 1.5em;
@@ -125,7 +171,7 @@ button:active {
   width: 200px;
 }
 
-/* TOPICS ==================================================================== */
+ /*TOPICS ==================================================================== */
 .topic-tabs {
   display: flex;
 }
@@ -189,6 +235,6 @@ button:active {
 .topic-list {
   margin-top: 20px;
   display: flex;
-  -webkit-flex-wrap: wrap; /* Safari */
+  -webkit-flex-wrap: wrap;  Safari 
   flex-wrap: wrap;
 }
