added matches button - couldnt get database to work because mongo problems

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -85,6 +85,12 @@ h3 {
   right:100px;
   top:1600px;
 }
+#matches {
+  display: inline-block;
+  position: absolute;
+  width: 70%;
+
+}
  /*FORM ELEMENTS ============================================================ */
 label, input, textarea, button {
   font-family: 'Montserrat', sans-serif;
