--- a/public/partials/userPage.html
+++ b/public/partials/userPage.html
@@ -28,6 +28,9 @@
             <b>Country: </b>{{userData.country}}
             <!-- <dt><b>Country</b></dt><dd>{{userData.country}}</dd> -->
           </dl>
+          <div id = "matches">
+            <button id = "matches" ng-click = "matches()" class ="myButton">Matches</button>
+          </div>
         </div>
       </div>      
     </div>
